refactor(stock): 重构股票分红计算